busybox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-dep
spec:
  selector:
    matchLabels:
      app: busybox
  replicas: 2 
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: busybox
        command:
          - sleep
          - "3600"
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
